fixed overflow, removed scroll bar

--- a/renderer/index.css
+++ b/renderer/index.css
@@ -13,3 +13,14 @@ body {
 a {
   text-decoration: none;
 }
+
+/* For Webkit-based browsers (Chrome, Safari and Opera) */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+/* For IE, Edge and Firefox */
+.scrollbar-hide {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
